Ajout des fonction JS dropdown de la page tournamentManagement

--- a/html/tournamentManagement.html
+++ b/html/tournamentManagement.html
@@ -203,130 +203,132 @@
                 class="dropdown"
               />
             </div>
-            <div class="top-box-players">
-              <div class="number-tournament">
-                <span id="number-of-players">5</span>
-                <p>Joueurs</p>
+            <div class="container-players">
+              <div class="top-box-players">
+                <div class="number-tournament">
+                  <span id="number-of-players">5</span>
+                  <p>Joueurs</p>
+                </div>
+                <div class="number-tournament">
+                  <span id="size-of-tournament">16</span>
+                  <p>Taille du tournoi</p>
+                </div>
               </div>
-              <div class="number-tournament">
-                <span id="size-of-tournament">16</span>
-                <p>Taille du tournoi</p>
+              <div class="bottom-box-players">
+                <div class="title-bottom-box">
+                  <h3>Liste des joueurs</h3>
+                  <button class="add">Ajouter</button>
+                </div>
+                <!-- tableau des joueurs inscrit  -->
+                <table class="table-players">
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th>Pseudo</th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <label for="list-player1" aria-label="Joueur inscrit"
+                          ><input
+                            type="checkbox"
+                            name="list-player1"
+                            id="list-player1"
+                        /></label>
+                      </td>
+                      <td>Joueur 1</td>
+                      <td>
+                        <img
+                          src="../assets/img/General/crayon.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <label for="list-player2" aria-label="Joueur inscrit"
+                          ><input
+                            type="checkbox"
+                            name="list-player2"
+                            id="list-player2"
+                        /></label>
+                      </td>
+                      <td>Joueur 2</td>
+                      <td>
+                        <img
+                          src="../assets/img/General/crayon.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <label for="list-player3" aria-label="Joueur inscrit"
+                          ><input
+                            type="checkbox"
+                            name="list-player3"
+                            id="list-player3"
+                        /></label>
+                      </td>
+                      <td>Joueur 3</td>
+                      <td>
+                        <img
+                          src="../assets/img/General/crayon.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <label for="list-player4" aria-label="Joueur inscrit"
+                          ><input
+                            type="checkbox"
+                            name="list-player4"
+                            id="list-player4"
+                        /></label>
+                      </td>
+                      <td>Joueur 4</td>
+                      <td>
+                        <img
+                          src="../assets/img/General/crayon.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <label for="list-player5" aria-label="Joueur inscrit"
+                          ><input
+                            type="checkbox"
+                            name="list-player5"
+                            id="list-player5"
+                        /></label>
+                      </td>
+                      <td>Joueur 5</td>
+                      <td>
+                        <img
+                          src="../assets/img/General/crayon.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td>
+                        <img
+                          src="../assets/img/General/poubelle.png"
+                          alt="Icone modifier"
+                        />
+                      </td>
+                    </tr>
+                  </tfoot>
+                </table>
               </div>
-            </div>
-            <div class="bottom-box-players">
-              <div class="title-bottom-box">
-                <h3>Liste des joueurs</h3>
-                <button class="add"> Ajouter</button>
-              </div>
-              <!-- tableau des joueurs inscrit  -->
-              <table class="table-players">
-                <thead>
-                  <tr>
-                    <th></th>
-                    <th>Pseudo</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                      <label for="list-player1" aria-label="Joueur inscrit"
-                        ><input
-                          type="checkbox"
-                          name="list-player1"
-                          id="list-player1"
-                      /></label>
-                    </td>
-                    <td>Joueur 1</td>
-                    <td>
-                      <img
-                        src="../assets/img/General/crayon.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <label for="list-player2" aria-label="Joueur inscrit"
-                        ><input
-                          type="checkbox"
-                          name="list-player2"
-                          id="list-player2"
-                      /></label>
-                    </td>
-                    <td>Joueur 2</td>
-                    <td>
-                      <img
-                        src="../assets/img/General/crayon.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <label for="list-player3" aria-label="Joueur inscrit"
-                        ><input
-                          type="checkbox"
-                          name="list-player3"
-                          id="list-player3"
-                      /></label>
-                    </td>
-                    <td>Joueur 3</td>
-                    <td>
-                      <img
-                        src="../assets/img/General/crayon.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <label for="list-player4" aria-label="Joueur inscrit"
-                        ><input
-                          type="checkbox"
-                          name="list-player4"
-                          id="list-player4"
-                      /></label>
-                    </td>
-                    <td>Joueur 4</td>
-                    <td>
-                      <img
-                        src="../assets/img/General/crayon.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <label for="list-player5" aria-label="Joueur inscrit"
-                        ><input
-                          type="checkbox"
-                          name="list-player5"
-                          id="list-player5"
-                      /></label>
-                    </td>
-                    <td>Joueur 5</td>
-                    <td>
-                      <img
-                        src="../assets/img/General/crayon.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td>
-                      <img
-                        src="../assets/img/General/poubelle.png"
-                        alt="Icone modifier"
-                      />
-                    </td>
-                  </tr>
-                </tfoot>
-              </table>
             </div>
           </div>
           <!-- BOX REGISTRATION -->
@@ -341,6 +343,7 @@
                 class="dropdown"
               />
             </div>
+            <div class="container-registration">
             <div class="top-box-registration">
               <div class="number-registration">
                 <span class="blue" id="number-waiting">5</span>
@@ -520,6 +523,7 @@
                 Non</label
               >
             </div>
+          </div>
           </div>
         </div>
       </div>
