--- a/testLogoPerso.html
+++ b/testLogoPerso.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test logo</title>
+    <link rel="stylesheet" href="./testLogoPerso.css">
 </head>
 <body>
 
-    <div></div>
+    <div class="logo">
+        <span class="gaming">GAMING</span><br><span class="tournament">Tournament</span>
+      </div>
     
 </body>
 </html>
