--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -23,38 +23,45 @@
 
       <form action="" method="">
         <div class="formSignUpTop">
-          <label for="pseudo"
+          <label for="nickname-user"
             >Pseudo :<span class="infoPseudo"
-              >*Sera visible par les autres utilisateur</span
-            ></label
-          >
-
+              >*Sera visible par les autres utilisateur</span>
+            </label>
           <input
             type="text"
-            name="pseudo"
-            id="pseudo"
+            name="nickname-user"
+            id="nickname-user"
             placeholder="Pseudo"
             required
           />
-          <label for="nomDeFamille">Nom :</label>
+          <p class="message-error letter-error-nickname">
+            Uniquement les caractères a-z et A-Z
+          </p>
+          <label for="firstname-user">Nom :</label>
           <input
             type="text"
-            name="nomDeFamille"
-            id="nomDeFamille"
+            name="firstname-user"
+            id="firstname-user"
             placeholder="Nom"
             required
           />
-          <label for="prenom">Prénom :</label>
+          <p class="message-error letter-error-firstname">
+            Le Uniquement les caractères a-z et A-Z
+          </p>
+          <label for="secondname-user">Prénom :</label>
           <input
             type="text"
-            name="prenom"
-            id="prenom"
+            name="secondname-user"
+            id="secondname-user"
             placeholder="Prénom"
             required
           />
+          <p class="message-error letter-error-secondname">
+            Le Uniquement les caractères a-z et A-Z
+          </p>
         </div>
         <div class="containerButton">
-          <button><a href="./SignUp2of2.html">Suivant</a></button>
+          <button id="button-general"><a href="./SignUp2of2.html">Suivant</a></button>
         </div>
 
         <p>1 / 2</p>
@@ -62,5 +69,7 @@
         <div class="dividerSignUp"></div>
       </form>
     </div>
+
+    <script src="../assets/javascript/signUp.js"></script>
   </body>
 </html>
